Se cambia el diseño

--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/aside/aside.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/aside/aside.component.html
@@ -1,17 +1,19 @@
 
 <aside class="bg-dark mt-5" id="aside">
     <br><br>
-    <ul class="navbar-nav m-3">
-        <li class="nav-item ">
-            <a class="nav-link active text-light" aria-current="page"
-                href="#">Proyecto-1</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-light" href="#">Proyecto-2</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-light" href="#">Proyecto-3</a>
-        </li>
-    </ul>
-   
+    <div class="list-group bg-dark" id="list-tab" >
+        <a class="list-group-item list-group-item-action active"
+            id="list-home-list" data-toggle="list" href="#list-home" role="tab"
+            aria-controls="home">Proyecto N°-1</a>
+        <a class="list-group-item list-group-item-action a bg-dark text-secondary" id="list-profile-list"
+            data-toggle="list" href="#list-profile" role="tab"
+            aria-controls="profile">Proyecto N°-2</a>
+        <a class="list-group-item list-group-item-action a bg-dark text-secondary"
+            id="list-messages-list" data-toggle="list" href="#list-messages"
+            role="tab" aria-controls="messages">Proyecto N°-3</a>
+        <a class="list-group-item list-group-item-action a bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list" href="#list-settings"
+            role="tab" aria-controls="settings">Proyecto N°-4</a>
+    </div>
+
 </aside>
