--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/footer/footer.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/footer/footer.component.html
@@ -1,3 +1,4 @@
+<!--
 <footer>
     <div class="container-fluid bg-dark text-light">
       <div class="row">
@@ -21,3 +22,25 @@
       </div>
     </div>
   </footer>
+-->
+<footer class="py-4 bg-light mt-auto">
+  <div class="row d-flex align-items-center justify-content-between small">
+    <div class="col-lg-4">
+      <h3></h3>
+    </div>
+    <div class="col-lg-4">
+      <div class="text-muted"><strong>Correo electronico: </strong>lucasalegre.web@gmail.com
+      </div>
+      <div class="text-muted"><strong>Numero de telefono: </strong>0345-405-0975
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="text-muted">Copyright &copy; Your Website 2023
+      </div>
+      <div>
+        <a href="#">Privacy Policy</a>
+        &middot;
+        <a href="#">Terms &amp; Conditions</a>
+      </div>
+    </div>
+  </div>
