--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/nav/nav.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/nav/nav.component.html
@@ -1,26 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-dark">
-    <div class="container ">
-        <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav" >
-                <li class="nav-item m-2">
-                    <img height="30px" width="30px" src="../../../assets/img/spring-3.svg">
-                </li>
-                <li class="nav-item ">
-                    <h2 class="text-light">Lucas Spring</h2>
-                </li>
-            </ul>
-            <ul class="navbar-nav" >
-                <li class="nav-item ">
-                    <a class="nav-link active text-light" aria-current="page"
-                        href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">sobre nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">contactos</a>
-                </li>
-            </ul>
-        </div>
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <div class="container-fluid nav-contenedor">
+        <ul class="navbar-nav">
+            <li class="nav-item m-2">
+                <img height="30px" width="30px"
+                    src="../../../assets/img/spring-3.svg">
+            </li>
+            <li class="nav-item ">
+                <h2 class="text-light">Lucas Spring</h2>
+            </li>
+        </ul>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link dropdown-item active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link dropdown-item active" href="#">Sobre nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class=" nav-link dropdown-item active" href="#">Contacto</a>
+            </li>
+        </ul>
     </div>
 </nav>
