Se crea el routin

--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/app.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/app.component.html
@@ -3,10 +3,9 @@
   <div class="col-2">
     <app-aside></app-aside>
   </div>
-  <div class="col-10">
-    <!--<app-main></app-main>-->
-    <app-simpson-main></app-simpson-main>
+  <div class="col-10 m5">
+    <br><br><br><br>
+    <router-outlet></router-outlet>
   </div>
 </div>
-
 <app-footer></app-footer>
