--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/aside/aside.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/aside/aside.component.html
@@ -2,18 +2,15 @@
 <aside class="bg-dark mt-5" id="aside">
     <br><br>
     <div class="list-group bg-dark" id="list-tab" >
-        <a class="list-group-item list-group-item-action active"
-            id="list-home-list" data-toggle="list" href="#list-home" role="tab"
-            aria-controls="home">Proyecto N°-1</a>
         <a class="list-group-item list-group-item-action a bg-dark text-secondary" id="list-profile-list"
             data-toggle="list" href="#list-profile" role="tab"
-            aria-controls="profile">Proyecto N°-2</a>
+            aria-controls="profile" routerLink="/main">Proyecto N°-2 Main</a>
         <a class="list-group-item list-group-item-action a bg-dark text-secondary"
-            id="list-messages-list" data-toggle="list" href="#list-messages"
-            role="tab" aria-controls="messages">Proyecto N°-3</a>
-        <a class="list-group-item list-group-item-action a bg-dark text-secondary"
-            id="list-settings-list" data-toggle="list" href="#list-settings"
-            role="tab" aria-controls="settings">Proyecto N°-4</a>
+            id="list-settings-list" data-toggle="list" routerLink="/form"
+            role="tab" aria-controls="settings">Proyecto N°-4 Form</a>
+            <a class="list-group-item list-group-item-action a bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list" routerLink="/list"
+            role="tab" aria-controls="settings">Proyecto N°-4 List</a>
     </div>
 
 </aside>
