--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes-Simpson/simpsong-listado/simpsong-listado.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes-Simpson/simpsong-listado/simpsong-listado.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src={{entrada.imagen}} alt="Card image cap" >
+  <img class="card-img-top" src={{entrada.imagen}} alt="Card image cap" />
   <div class="card-body">
     <h5 class="card-title">{{entrada.nombre}}</h5>
     <p class="card-text">{{entrada.profession}}</p>
