--- a/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/aside/aside.component.html
+++ b/2023-12-13-Ejercicios-Angular/ejercicioAngular/src/app/componentes/aside/aside.component.html
@@ -1,16 +1,49 @@
 
 <aside class="bg-dark mt-5" id="aside">
     <br><br>
-    <div class="list-group bg-dark" id="list-tab" >
-        <a class="list-group-item list-group-item-action a bg-dark text-secondary" id="list-profile-list"
-            data-toggle="list" href="#list-profile" role="tab"
-            aria-controls="profile" routerLink="/main">Proyecto N°-2 Main</a>
-        <a class="list-group-item list-group-item-action a bg-dark text-secondary"
-            id="list-settings-list" data-toggle="list" routerLink="/form"
-            role="tab" aria-controls="settings">Proyecto N°-4 Form</a>
-            <a class="list-group-item list-group-item-action a bg-dark text-secondary"
-            id="list-settings-list" data-toggle="list" routerLink="/list"
-            role="tab" aria-controls="settings">Proyecto N°-4 List</a>
+    <div class="list-group bg-dark" id="list-tab">
+        <!--<a
+            routerLink="/main"
+            class="list-group-item list-group-item-action  bg-dark text-secondary"
+            id="list-profile-list"
+            data-toggle="list" role="tab"
+            aria-controls="profile"
+            [ngClass]="(getUrl('/main'))? 'active' : 'a'">Proyecto N°-2 Main</a>
+        <a
+            routerLink="/form"
+            class="list-group-item list-group-item-action  bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list"
+            role="tab" aria-controls="settings"
+            [ngClass]="(getUrl('/form'))? 'active' : 'a'">Proyecto N°-3 Form</a>
+
+        <a
+            routerLink="/list"
+            class="list-group-item list-group-item-action bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list"
+            role="tab" aria-controls="settings"
+            [ngClass]="(getUrl('/list'))? 'active' : 'a'">Proyecto N°-4 List</a>-->
+
+        <a
+            routerLink="/personaje-main"
+            class="list-group-item list-group-item-action bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list"
+            role="tab" aria-controls="settings"
+            [ngClass]="(getUrl('/personaje-main'))? 'active' : 'a'">Proyecto
+            N°-5 Main</a>
+        <a
+            routerLink="/personaje-table"
+            class="list-group-item list-group-item-action bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list"
+            role="tab" aria-controls="settings"
+            [ngClass]="(getUrl('/personaje-table'))? 'active' : 'a'">Proyecto
+            N°-6 table</a>
+        <a
+            routerLink="/personaje-card"
+            class="list-group-item list-group-item-action bg-dark text-secondary"
+            id="list-settings-list" data-toggle="list"
+            role="tab" aria-controls="settings"
+            [ngClass]="(getUrl('/personaje-card'))? 'active' : 'a'">Proyecto
+            N°-7 card</a>
     </div>
 
 </aside>
