--- a/2023-12-18-Ejercicios-Diarios-Angular/ejercicioAngular/src/app/app.component.html
+++ b/2023-12-18-Ejercicios-Diarios-Angular/ejercicioAngular/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav></app-nav>
+<!--<app-nav></app-nav>
 <div class="row">
   <div class="col-2">
     <app-aside></app-aside>
@@ -7,4 +7,8 @@
     <br><br><br><br>
     <router-outlet></router-outlet>
   </div>
-</div>
+</div>-->
+<p>{{nombre}}</p>
+<p>{{nombre | uppercase}}</p>
+<p>{{apellido | lowercase}}</p>
+<p>{{total | currency: 'luc'}}</p>
