--- a/2024-02-22/todo-list/src/app/componentes/content/content.component.html
+++ b/2024-02-22/todo-list/src/app/componentes/content/content.component.html
@@ -1,10 +1,39 @@
 <section>
+  <button routerLink="/agregar-tareas"
+  class="buttonAdd btn btn-primary buttonAgregar">Agregar Tareas</button>
     <div class="container text-center">
-        <h2 class="mb-3">Primer ejercicio</h2>
-        <button class="btn btn-secondary mx-2" (click)="incrementBy(-1)">Decrementar</button>
-        <button class="btn btn-secondary mx-2" (click)="random()">Generar aleatorio</button>
-        <button class="btn btn-secondary mx-2" (click)="incrementBy(1)">Incrementar</button>
-        <h3>{{ num }}</h3>
+        <h2 class="mb-3">Lista de Tareas</h2>
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#id</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Descripcion</th>
+                <th scope="col">Estado</th>
+                <th> </th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let tarea of tareas; index as i">
+              <tr>
+                <th scope="row">{{tarea.id}}</th>
+                <td>{{tarea.nombre}}</td>
+                <td>{{tarea.descripcion}}</td>
+                <td>{{tarea.estado}}</td>
+                <td class="editarEliminar">
+                    <button
+                        class="btn button btn-warning"
+                        [routerLink]="['/editar-tareas', tarea.id]"><i
+                            class="bi bi-pencil-fill"></i></button>
+                    <button
+                        class="btn button btn-danger"
+                        (click)="eliminar(tarea)"><i
+                            class="bi bi-trash3-fill"></i></button>
+                </td>
+              </tr>
+             
+            </tbody>
+          </table>
+        
     </div>
     <div class="container">
         <app-card *ngIf="this.num >=5"></app-card>
