--- a/2024-02-22/todo-list/src/app/componentes/header/header.component.html
+++ b/2024-02-22/todo-list/src/app/componentes/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="row my-3">
     <div class="col">
-        <h1>My Shop</h1>
+        <h1>Tareas</h1>
     </div>
-    <div class="col col-8 d-flex justify-content-end">
+    <div class="col col-12 d-flex justify-content-end">
         <ul class="list-group d-flex flex-row ">
             <li class="list-group-item border-0 px-1"><a class="btn btn-light nav-item" href="" *ngFor="let op of options">{{op}}</a></li>
         </ul>
